2008-03-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/modulator.h, tests/modulator_test.cpp,
	tests/modulator_test.ref: Fix bug [1908644] in
	Modulator<>::set(symbols, bits2symbols) function

	The bitmap matrix used in the demodulate_bits() function of the
	Modulator<> base class was improperly constructed from the input
	bits2symbols mapping vector. This resulted in demodulation errors
	for some constellations, e.g. 64-QAM or 8-PSK. This patch fixes
	this problem.

	Thanks to Yann Cocheril for reporting this problem.

2008-03-04  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/llr.cpp, itpp/comm/llr.h: In case of an overflow
	saturate QLLR values instead of aborting

	An overflow may occur when converting real-valued LLR values into
	QLLR ones and also when calculating the Hagenauer's "boxplus"
	operator. This patch implements a conditional QLLR saturation in
	such cases. Moreover, the Boxplus() function is no longer an
	inline function, because this actually caused performance loss of
	the LDPC codes decoder.

	Finally, make the argument of to_double(QLLR) and to_qllr(double)
	pass-by-value instead of const-reference, since that's faster for
	POD like double and int.

	Thanks to Martin Senst for providing the initial patch.

2008-03-02  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/vec.cpp, itpp/base/vec.h: Clean-up redundant use of
	"const" keyword in the Vec class

	There is no need for declaring the returned by value types with an
	additional "const" keyword. Moreover, Num_T is assumed a simple or
	built in type for the Vec class, i.e. bin, short int, int, double
	and complex<double>. Therefore it might be more efficient to pass
	arguments of this type by value, in which case the "const" keyword
	is also redundant.

	Logical operators (==, !=, >, >=, < and <=) no longer create a
	local copy of the vector contents.

	By the way, use consistent name "t" for Num_T variables and wrap
	long lines before 80 column.
